effects/translucency/translucency.h
@@ -41,8 +41,6 @@ class TranslucencyEffect
     Q_PROPERTY(qreal dropDownMenus READ configuredDropDownMenus)
     Q_PROPERTY(qreal popupMenus READ configuredPopupMenus)
     Q_PROPERTY(qreal tornOffMenus READ configuredTornOffMenus)
-    Q_PROPERTY(int moveResizeDuration READ configuredMoveResizeDuration)
-    Q_PROPERTY(int activeInactiveDuration READ configuredActiveInactiveDuration)
 public:
     TranslucencyEffect();
     virtual void reconfigure(ReconfigureFlags);
@@ -81,12 +79,6 @@ public:
     qreal configuredTornOffMenus() const {
         return tornoffmenus;
     }
-    int configuredMoveResizeDuration() const {
-        return moveresize_timeline.duration();
-    }
-    int configuredActiveInactiveDuration() const {
-        return activeinactive_timeline.duration();
-    }
 public Q_SLOTS:
     void slotWindowActivated(KWin::EffectWindow* w);
     void slotWindowStartStopUserMovedResized(KWin::EffectWindow *w);
@@ -108,13 +100,7 @@ private:
     double popupmenus;
     double tornoffmenus;
 
-    EffectWindow* fadeout;
-    EffectWindow* current;
-    EffectWindow* previous;
     EffectWindow* active;
-
-    QTimeLine moveresize_timeline;
-    QTimeLine activeinactive_timeline;
 
     bool m_activeDecorations;
     bool m_activeMoveResize;
